# BrainDrain

./: .gitignore  BrainDrain.py  README.md  attack_test.py  bdscript.py  cli.py  probe_test.py  pyproject.toml  test.py  thinkTrap_attack_test.py  thinkTrap_test.py
attacks/: reasoning_bomb.py  sponge_prompts.py  think_trap.py
braindrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
core/: base_attack.py
orchestration/: attacker_instance.py  dispatcher.py  registry.py  result_collector.py
probes/: it_probes_docs.md  itl_probes.py  kv_saturation_calculator.py
probes/results/: baseline_cache.json  probe_history.jsonl
prompts/: reasoningBomb_puzzles.json  thinktrap_prompts_20.json
reporting/: reporter.py
results/: baseline_cache.json  deepseek-r1-14b-256_attack.json  deepseek-r1-14b-256_probes.jsonl  deepseek-r1-14b-mixed_attack.json  deepseek-r1-14b-mixed_probes.jsonl  run_20260430_121251_probes.jsonl  run_20260506_072523_probes.jsonl
