[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braindrain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "numpy>=1.24",
    "cmaes>=0.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["attacks*", "core*", "probes*", "reporting*"]

[project.scripts]
braindrain = "cli:main"

